    - Fixed that hexports were showing vulnerability to lightning strikes on Fulgora.
    - Fixed crash caused by other mods removing or restructuring title screen music.
    - Fixed that concrete was covering too much area over hexes, where it was being placed over water around the perimeter of the land.
    - Fixed that /regenerate-trades and /remove-trade did not fully remove trades.
  Gui:
    - Trade arrows display nonzero productivity without mousing over them.
    - Softened the white and cyan trade arrow sprites.
    - Removed the boxes around each trade, de-cluttering the hex core GUI and trade overview.
    - Moved the trade arrow's tooltip to a more obvious location that's below the trade, having the sprite of a productivity module.
    - Added button for pinging trades.
    - Improved trade overview layout.
    - Some trade overview filters that become irrelevant under certain conditions are now grayed out, e.g. "max output trades" slider grays out when "exact outputs match" is enabled.
  Optimizations:
    - Optimized dungeon turret reloading.
    - Optimized ahead-of-time chunk generation around players.
  Translation:
    - Added Polish translations.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21/11/25
  Major Features:
    - Added item buffs to most items, unlocked and upgraded in the Catalog.
        Unlocking and enhancement difficulty is configurable with two new settings, "Item Buff Cost Scale" and "Item Buff Cost Base".
    - Added command /set-item-value so that you can get modded items to show up in random trades, the catalog, and be able to use them in /add-trade.
        Also added complementary commands: /import-item-values /export-item-values /remove-item-value /get-item-value
    - Added Fulgora quest to unlock free roboports ("Hexports") built into hex cores that require no power.
  Features: